# ads-ai

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cleanup.sh  pyproject.toml  setup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
ads_ai/: __init__.py  config.py  main.py  pipeline.py  pipeline_stages.py
ads_ai/agents/: README.md  __init__.py  asset.py  attention.py  audience.py  base.py  compliance.py  creative.py  diagnostics.py  intelligence.py  iteration.py  scoring.py  strategy.py  validation.py  video.py
ads_ai/utils/: __init__.py  file_ops.py  prompts.py  timing.py
docs/: ARCHITECTURE.md  QUALITY_STANDARDS.md  faq.md  getting-started.md
src/ads_ai/: README.md  __init__.py  config.py  main.py  pipeline.py
src/ads_ai/agents/: __init__.py  adaptation.py  asset.py  attention.py  audience.py  base.py  brand.py  budget.py  clarity.py  compliance.py  creative.py  deployment.py  diagnostics.py  intelligence.py  intent.py  iteration.py  learning.py  models.py  scoring.py  strategy.py  validation.py  video.py
src/ads_ai/utils/: README.md  file_ops.py
tests/: conftest.py  standalone_runner.py  test_agent_factory.py  test_agent_quality.py  test_agents.py  test_components.py  test_config.py  test_file_ops.py  test_main.py  test_models.py  test_pipeline.py  test_pipeline_stages.py  test_video.py
